Fix overflow of header container

--- a/styles.css
+++ b/styles.css
@@ -44,11 +44,11 @@ img {
 header {
   padding: 20px 3%;
   width: 100%;
-  height: 175px;
+  height: 180px;
   display: grid;
+  row-gap: 20px;
   grid-template-columns: 2fr 1fr;
-  row-gap: 30px;
-  grid-template-rows: 40px 100px;
+  grid-template-rows: 40px calc(100% - 60px);
 }
 
 .search-container {
@@ -78,9 +78,8 @@ header {
 }
 .introduction-container {
   display: grid;
-  height: 100%;
-  grid-template-columns: 100px 1fr;
-  grid-template-rows: 30px 70px;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: 30% 70%;
   column-gap: 30px;
 }
 
